--- a/Sem 2/DT/Lab 6/6.3.2.1. - Google Maps/index.html
+++ b/Sem 2/DT/Lab 6/6.3.2.1. - Google Maps/index.html
@@ -9,7 +9,7 @@
 	<!-- Replace the value of the key parameter with your own API key. -->
 	<!-- "your api key" -->
 	<script async defer
-  	src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBNMb5W6se4WUOfrmRM4JAKvnwQsyh7og0&callback=initMap"> 
+  	src = "https://maps.googleapis.com/maps/api/js?key=*&callback=initMap"> 
 	</script>
 	<script src="app-gps.js"></script>
 
