--- a/Sem 2/DT/Lab 6/6.3.2.2. - TomTom/my-map.html
+++ b/Sem 2/DT/Lab 6/6.3.2.2. - TomTom/my-map.html
@@ -30,7 +30,7 @@
     <script>
       tt.setProductInfo("Map Display", "1.0");
       tt.map({
-          key: 'ZSGB7fVNIGJPHnQT6jGwXbSAYSGVuXa6',
+          key: '*',
           container: 'map',
           style: 'tomtom://vector/1/basic-main'
       });
