--- a/Sem 2/DT/Lab 6/6.3.2.3. - Google Maps example/index.html
+++ b/Sem 2/DT/Lab 6/6.3.2.3. - Google Maps example/index.html
@@ -7,7 +7,7 @@
 		<div id="map"></div>
 
 		<script async defer
-  		src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBNMb5W6se4WUOfrmRM4JAKvnwQsyh7og0&callback=initMap">
+  		src = "https://maps.googleapis.com/maps/api/js?key=*&callback=initMap">
 		</script>
 
 		<script src="app-gps.js"></script>
